--- a/track-error-page-starter/index.html
+++ b/track-error-page-starter/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	
-	<title>Track Error Page Responsive Widget Template :: W3layouts</title>
+	<title>CSS Loader </title>
 
 	<link rel="stylesheet" href="css/style.css" type="text/css" media="all" /><!-- Style-CSS -->
 	<link href="css/font-awesome.css" rel="stylesheet"><!-- font-awesome-icons -->
